[package]
name = "mini_p2p_file_transfer_system"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bendy = "0.3.3"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
clippy = "0.0.302"
color-eyre = "0.6.5"
crossterm = "0.29.0"
hex = "0.4.3"
ratatui = "0.29.0"
sha1 = "0.10.6"
tokio = "1.47.1"
torrex = "0.2.1"
